# Tramel

./: .gitignore  CLAUDE.md  COMPLETE_PROJECT_DOCUMENTATION.md  LICENSE  LLM_Development.md  README.md  SYSTEM_PROMPT.md  pyproject.toml  trammel.db
.chisel/: chisel.db  chisel.db-shm  chisel.db-wal
.stele-context/: stele_context.db  stele_context.db-shm
findings/: trammel.md  trammel.md_closed
public/: app.js  collections.html  index.html  meal-planner.html  profile.html  recipe.html  recipes.html  search.html  shopping-list.html  style.css
scripts/: release.sh
tests/: index.js  testRunner.js  test_analyzer_regression.py  test_analyzer_specs.py  test_analyzers.py  test_archetypes.py  test_findings_checklist.py  test_forge.py  test_forge_extra.py  test_implicit_deps.py  test_mcp_dispatch.py  test_recipe_index_audit.py  test_strategies.py  test_trammel.py  test_trammel_extra.py
trammel/: __init__.py  analyzer_engine.py  analyzer_resolvers.py  analyzer_specs.py  analyzers.py  analyzers_ext.py  analyzers_ext2.py  cli.py  constraints.py  core.py  goal_nlp.py  harness.py  implicit_deps.py  implicit_deps_engines.py  language_detection.py  mcp_server.py  mcp_stdio.py  pattern_config.py  pattern_learner.py  plan_merge.py  planner_helpers.py  project_config.py  recipe_fingerprints.py  recipe_index.py  scaffold_creation.py  scaffold_logic.py  scaffold_templates.py  scaffold_validation.py  scoring.py  store.py  store_agents.py  store_plans.py  store_recipes.py  store_retrieval.py  store_scaffolds.py  store_telemetry.py  strategies.py  text_similarity.py  tool_schemas.py  (+1 more)
(+222 files in other folders)
