[project]
name = "trammel"
version = "3.2.0"
description = "Dependency-aware planning, incremental verification, and recipe memory for LLM-assisted coding (stdlib-only core)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "IronAdamant" },
]
keywords = [
    "llm",
    "planning",
    "coding-assistant",
    "verification",
    "mcp",
    "beam-search",
    "recipe-memory",
    "dependency-analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/IronAdamant/Trammel"
Repository = "https://github.com/IronAdamant/Trammel"
Issues = "https://github.com/IronAdamant/Trammel/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
trammel = "trammel.cli:main"
trammel-mcp = "trammel.mcp_stdio:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["trammel*"]
